# ForTrilinos

./: .gitignore  .jenkins  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  Makefile.export.ForTrilinos.in  Makefile.in  PackagesList.cmake  README.md  ROADMAP.md  ReleaseNotes.txt  _config.yml  aclocal.m4  bootstrap  configure  configure.ac  index.md  nagfor.pl  nagfor.sh  swig_hash
doc/: CMakeLists.txt  Doxyfile  DoxyfileWeb  acknowledgments.rst  build_docs  conf.py  config.json.in  index.doc  index.rst  infrastructure.rst  install.rst  introduction.rst  modules.rst  overview.rst  references.rst  usage.rst  version.json.in
doc/Doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile_Teuchos.in  Doxyfile_Tpetra.in  Doxyfile_teuchos.in  Doxyfile_tpetra.in  docstrings.py.in  doxy2swig.py  doxy2swig.py.in
doc/_static/: fortrilinos-tm-header.tex  references.bib
doc/modules/: fortpetra.rst
doc/source/: developer_tools.rst  overview.rst
docs/: CMakeLists.txt
docs/source/: conf.py  developer_tools.rst  index.rst  install.rst  links.txt  overview.rst
example/: CMakeLists.txt  MapsAndVectors.F90  PowerMethod.F90  test-installation.sh
example/Abstract_Burgers_Central_Difference/: main.F90
example/Burgers_Solver_Central_Difference/: CMakeLists.txt  main.F90
example/Concrete_Burgers_Central_Difference/: main.F90
example/FEpetra_power_method/: CMakeLists.txt  FEpetra_power_method.F90
example/aztecoo/: CMakeLists.txt  main.F90
example/test-installation/: .gitignore  CMakeLists.txt  downstream-app.F90
example/verySimple/: CMakeLists.txt  verySimple.F90  verySimpleObjectOriented.F90
example/verySimpleObjectOriented/: CMakeLists.txt  verySimpleObjectOriented.F90
src/: ;  CMakeLists.txt  Epetra_Map_Module.f03  Epetra_Vector_Module.f03  ForTrilinos.h  ForTrilinos_assertion_utility.F90  ForTrilinos_config.h.in  ForTrilinos_enum_wrappers.F90  ForTrilinos_enums.F90  ForTrilinos_enums.f03  ForTrilinos_enums.f90  ForTrilinos_error.F90  ForTrilinos_external_utils.F90  ForTrilinos_hermetic.F90  ForTrilinos_hermetic.f90  ForTrilinos_hermetic_new.F90  ForTrilinos_ref_counter.F90  ForTrilinos_table_man.F90  ForTrilinos_universal.F90  ForTrilinos_universal.f90  ForTrilinos_universal_new.F90  ForTrilinos_utils.F90  ForTrilinos_utils.f03  ForTrilinos_utils.f90  ForTrilinos_utils_interface.F90  ForTrilinos_utils_interface.f03  ForTrilinos_utils_interface.f90  Makefile.am  Makefile.in  assertion_utility.F90  forepetra.f03  forepetraext.f03  fortrilinos_copyright.i  fortrilinos_version.cpp.in
src/amesos/: FAmesos.F90  foramesos.F90
src/aztecoo/: FAztecOO.F90  foraztecoo.F90
src/belos/: CMakeLists.txt
src/doc/: FEpetra_BlockMap.f90  FEpetra_Comm.f90  FEpetra_CrsGrapn.f90  FEpetra_DistObject.f90  FEpetra_Import.f90  FEpetra_LinearProblem.f90  FEpetra_Map.f90  FEpetra_MultiVector.f90  FEpetra_SerialComm.f90  FEpetra_Vector.f90
src/epetra/: ;  CMakeLists.txt  Epetra.f90  Epetra.i  Epetra_BlockMap.i  Epetra_Comm.i  Epetra_Map_Module.f03  Epetra_Map_Module.f90  Epetra_MpiComm.i  Epetra_MpiComm_Module.f03  Epetra_MpiComm_Module.f90  Epetra_Object.i  Epetra_SerialComm.i  Epetra_SerialComm_Module.f03  Epetra_SerialComm_Module.f90  Epetra_Vector_Module.f03  FEpetra_BlockMap.F90  FEpetra_Comm.F90  FEpetra_Comm.f90  FEpetra_CrsGraph.F90  FEpetra_CrsMatrix.F90  FEpetra_DistObject.F90  FEpetra_Export.F90  FEpetra_Import.F90  FEpetra_LinearProblem.F90  FEpetra_Map.F90  FEpetra_MpiComm.F90  FEpetra_MpiComm.f90  FEpetra_MultiVector.F90  FEpetra_OffsetIndex.F90  FEpetra_RowMatrix.F90  FEpetra_SerialComm.F90  FEpetra_SerialComm.f90  FEpetra_SrcDistObject.F90  FEpetra_Vector.F90  forepetra.F90  forepetra.f03  forepetra.f90  forepetra.i  forepetraFORTRAN_wrap.cxx
src/forbelos/: Belos_Types.i  forbelos.i
src/forerror/: extern_forerror.i  forerror.i
src/forteuchos/: CMakeLists.txt  Teuchos_Array.i  Teuchos_ArrayRCP.i  Teuchos_ArrayView.i  Teuchos_Comm.i  Teuchos_Exceptions.i  Teuchos_ParameterList.i  Teuchos_RCP.i  Teuchos_Types.i  Teuchos_XML.i  forteuchos.i
src/fortpetra/: ForTrilinos_DefaultNodeType.hpp  Tpetra_ConfigDefs.i  Tpetra_CrsGraph.i  Tpetra_CrsMatrix.i  Tpetra_DistObject.i  Tpetra_Import_Export.i  Tpetra_InOut.i  Tpetra_Map.i  Tpetra_MatrixMatrix.i  Tpetra_MultiVector.i  Tpetra_Operator.i  Tpetra_RowMatrix.i  Tpetra_Vector.i  fortpetra.i
src/fortrilinos/: eigen_handle.cpp  eigen_handle.hpp  nox.i  solver_handle.cpp
src/fortrilinos_hl/: eigen_handle.cpp  eigen_handle.hpp  fortrilinos_hl.i  fortrilinos_utilities.hpp  model_evaluator.hpp  model_evaluator_def.hpp  nox.i  nox_solver_def.hpp  solver_handle.cpp  solver_handle.hpp
src/galeri/: forgaleri.F90
src/ifpack/: forifpack.F90
src/interface/: CMakeLists.txt  nox_solver.hpp
src/ioc/: CMakeLists.txt
src/pliris/: FPliris.F90  forpliris.F90
src/simple/: CMakeLists.txt
src/skeleton/: BaseClass.F90
src/teuchos/: CMakeLists.txt  DBCF.f90  Teuchos_Array.i  Teuchos_ParameterList.i  Teuchos_RCP.i  Teuchos_Traits.i  Teuchos_Types.i  Teuchos_XML.i  forteuchos.F90  forteuchos.f90  forteuchosFORTRAN_wrap.cxx  teuchos.f90  teuchos.i
src/tpetra/: CMakeLists.txt  ForTrilinos_DefaultNodeType.hpp.in  Tpetra_ConfigDefs.i  Tpetra_MatrixMatrix.i  Tpetra_MultiVector.i  fortpetra.i
src/utils/: CMakeLists.txt  copyright.i
test/: CMakeLists.txt  FEpetra_Vector.cpp  FEpetra_Vector.h  Makefile.am  Makefile.in  definition  dummy.cpp  fortest.F90  interoperability_check.F90  interoperability_check.f03  interoperability_check.f90  simpleEpetraExteranCInterface.c  simpleEpetraFortranInterface.f03  simpleEpetraOOFortranExample.f03  simpleEpetraOOFortranExample.f90
test/belos/: test_belos_types.F90
test/compiler_tests/: CMakeLists.txt  check_compiler_for_leaks_with_arrays.F90  check_compiler_for_memory_leaks.F90  check_for_memory_leaks.F90
test/forbelos/: CMakeLists.txt  test_belos_types.F90
test/forteuchos/: CMakeLists.txt  test_teuchos_array.F90  test_teuchos_comm.F90  test_teuchos_plist.F90
test/fortpetra/: CMakeLists.txt  test_tpetra_crsgraph.F90  test_tpetra_crsgraph_helper.F90  test_tpetra_crsmatrix.F90  (+6 more)
(+351 files in other folders)
